transport/session/src/snapshots/hopr_transport_session__metric_bridge__tests__flatten_snapshot_value_cases-4.snap
---
source: transport/session/src/metric_bridge.rs
expression: collect_flat(input)
---
[
    SessionMetricSample {
        name: "hopr_session_active",
        value: U64(
            1,
        ),
    },
]
