transport/session/src/snapshots/hopr_transport_session__metric_bridge__tests__flatten_snapshot_value_cases-6.snap
---
source: transport/session/src/metric_bridge.rs
expression: collect_flat(input)
---
[
    SessionMetricSample {
        name: "hopr_session_count",
        value: U64(
            5,
        ),
    },
]
