transport/session/src/snapshots/hopr_transport_session__metric_bridge__tests__flatten_snapshot_value_handles_booleans.snap
---
source: transport/session/src/metric_bridge.rs
expression: "collect_flat(serde_json::json!({ \"active\": true }))"
---
[
    SessionMetricSample {
        name: "hopr_session_active",
        value: U64(
            1,
        ),
    },
]
