transport/session/src/snapshots/hopr_transport_session__metric_bridge__tests__flatten_snapshot_value_handles_floats.snap
---
source: transport/session/src/metric_bridge.rs
expression: "collect_flat(serde_json::json!({ \"rate\": 2.78 }))"
---
[
    SessionMetricSample {
        name: "hopr_session_rate",
        value: F64(
            2.78,
        ),
    },
]
