transport/session/src/snapshots/hopr_transport_session__metric_bridge__tests__flatten_snapshot_value_handles_nested_objects.snap
---
source: transport/session/src/metric_bridge.rs
expression: "collect_flat(serde_json::json!({ \"transport\": { \"bytes_in\": 100 } }))"
---
[
    SessionMetricSample {
        name: "hopr_session_transport_bytes_in",
        value: U64(
            100,
        ),
    },
]
