transport/session/src/snapshots/hopr_transport_session__metric_bridge__tests__flatten_snapshot_value_handles_numbers.snap
---
source: transport/session/src/metric_bridge.rs
expression: "collect_flat(serde_json::json!({ \"packets_in\": 42 }))"
---
[
    SessionMetricSample {
        name: "hopr_session_packets_in",
        value: U64(
            42,
        ),
    },
]
