transport/session/src/snapshots/hopr_transport_session__metric_bridge__tests__flatten_snapshot_value_skips_session_id_at_root.snap
---
source: transport/session/src/metric_bridge.rs
expression: "collect_flat(serde_json::json!({ \"session_id\": \"abc\", \"bytes_in\": 10 }))"
---
[
    SessionMetricSample {
        name: "hopr_session_bytes_in",
        value: U64(
            10,
        ),
    },
]
